--- a/lib/os/Kconfig
+++ b/lib/os/Kconfig
@@ -26,6 +26,12 @@ config BASE64
 	help
 	  Enable base64 encoding and decoding functionality
 
+config CRC
+	bool "Cyclic redundancy check (CRC) Support"
+	default y
+	help
+	  Enable use of CRC.
+
 config PRINTK_SYNC
 	bool "Serialize printk() calls"
 	default y if SMP && MP_NUM_CPUS > 1 && !(EFI_CONSOLE && LOG)
