--- a/subsys/ipc/ipc_service/backends/Kconfig
+++ b/subsys/ipc/ipc_service/backends/Kconfig
@@ -26,6 +26,28 @@ config IPC_SERVICE_BACKEND_ICMSG
 	  Chosing this backend results in single endpoint implementation based
 	  on circular packet buffer.
 
+config IPC_SERVICE_BACKEND_ICMSG_ME_INITIATOR
+	bool "ICMSG backend with multi-endpoint support in initiator role"
+	depends on MBOX
+	depends on DT_HAS_ZEPHYR_IPC_ICMSG_ME_INITIATOR_ENABLED
+	select IPC_SERVICE_ICMSG
+	select EVENTS
+	help
+	  Chosing this backend results in multi endpoint implementation based
+	  on circular packet buffer. This enables enpoint discovery initiator
+	  role.
+
+config IPC_SERVICE_BACKEND_ICMSG_ME_FOLLOWER
+	bool "ICMSG backend with multi-endpoint support in follower role"
+	depends on MBOX
+	depends on DT_HAS_ZEPHYR_IPC_ICMSG_ME_FOLLOWER_ENABLED
+	select IPC_SERVICE_ICMSG
+	select EVENTS
+	help
+	  Chosing this backend results in multi endpoint implementation based
+	  on circular packet buffer. This enables enpoint discovery follower
+	  role.
+
 config IPC_SERVICE_RPMSG
 	bool "RPMsg support library"
 	help
@@ -67,4 +89,5 @@ config SYSTEM_WORKQUEUE_PRIORITY
 	depends on IPC_SERVICE_ICMSG
 	range -256 -1
 
+rsource "Kconfig.icmsg_me"
 rsource "Kconfig.rpmsg"
