--- a/boards/xtensa/esp32/esp32.dts
+++ b/boards/xtensa/esp32/esp32.dts
@@ -13,6 +13,7 @@
 	compatible = "espressif,esp32";
 
 	aliases {
+		sw0 = &user_button;
 		uart-0 = &uart0;
 		i2c-0 = &i2c0;
 		watchdog0 = &wdt0;
@@ -24,10 +25,35 @@
 		zephyr,shell-uart = &uart0;
 		zephyr,flash = &flash0;
 	};
+
+	power-states {
+		light_sleep: light_sleep {
+			compatible = "zephyr,power-state";
+			power-state-name = "standby";
+			min-residency-us = <200>;
+			exit-latency-us = <60>;
+		};
+
+		deep_sleep: deep_sleep {
+			compatible = "zephyr,power-state";
+			power-state-name = "soft-off";
+			min-residency-us = <2000>;
+			exit-latency-us = <212>;
+		};
+	};
+
+	gpio_keys {
+		compatible = "gpio-keys";
+		user_button: user_button {
+			label = "BOOT";
+			gpios = <&gpio0 0 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
+		};
+	};
 };
 
 &cpu0 {
 	clock-frequency = <ESP32_CLK_CPU_240M>;
+	cpu-power-states = <&light_sleep &deep_sleep>;
 };
 
 &cpu1 {
