--- a/boards/arm/s32z270dc2_r52/s32z270dc2_r52.dtsi
+++ b/boards/arm/s32z270dc2_r52/s32z270dc2_r52.dtsi
@@ -52,3 +52,19 @@
 &spi9 {
 	clock-frequency = <100000000>;
 };
+
+&stm0 {
+	clock-frequency = <133333333>;
+};
+
+&stm1 {
+	clock-frequency = <133333333>;
+};
+
+&stm2 {
+	clock-frequency = <133333333>;
+};
+
+&stm3 {
+	clock-frequency = <133333333>;
+};
