--- a/dts/arm/nxp/nxp_s32z27x_r52.dtsi
+++ b/dts/arm/nxp/nxp_s32z27x_r52.dtsi
@@ -209,6 +209,9 @@
 				compatible = "nxp,s32-gpio";
 				reg = <0x40521702 0x02>, <0x40520240 0x40>;
 				reg-names = "pgpdo", "mscr";
+				interrupt-parent = <&eirq0>;
+				interrupts = <1 1>, <3 0>, <5 2>, <12 3>,
+						<13 4>, <14 5>, <15 6>;
 				gpio-controller;
 				#gpio-cells = <2>;
 				ngpios = <16>;
@@ -219,6 +222,8 @@
 				compatible = "nxp,s32-gpio";
 				reg = <0x40521700 0x02>, <0x40520280 0x40>;
 				reg-names = "pgpdo", "mscr";
+				interrupt-parent = <&eirq0>;
+				interrupts = <0 7>;
 				gpio-controller;
 				#gpio-cells = <2>;
 				ngpios = <15>;
@@ -256,6 +261,8 @@
 				compatible = "nxp,s32-gpio";
 				reg = <0x40d21700 0x02>, <0x40d20280 0x40>;
 				reg-names = "pgpdo", "mscr";
+				interrupt-parent = <&eirq1>;
+				interrupts = <3 0>, <5 1>;
 				gpio-controller;
 				#gpio-cells = <2>;
 				ngpios = <16>;
@@ -297,6 +304,9 @@
 				compatible = "nxp,s32-gpio";
 				reg = <0x40d21708 0x02>, <0x40d20380 0x40>;
 				reg-names = "pgpdo", "mscr";
+				interrupt-parent = <&eirq1>;
+				interrupts = <0 2>, <1 3>, <4 4>,
+						<5 5>, <10 6>, <11 7>;
 				gpio-controller;
 				#gpio-cells = <2>;
 				ngpios = <12>;
@@ -338,6 +348,8 @@
 				compatible = "nxp,s32-gpio";
 				reg = <0x4252170e 0x02>, <0x425203c0 0x40>;
 				reg-names = "pgpdo", "mscr";
+				interrupt-parent = <&eirq4>;
+				interrupts = <11 0>, <13 1>;
 				gpio-controller;
 				#gpio-cells = <2>;
 				ngpios = <16>;
@@ -348,6 +360,8 @@
 				compatible = "nxp,s32-gpio";
 				reg = <0x4252170c 0x02>, <0x42520400 0x40>;
 				reg-names = "pgpdo", "mscr";
+				interrupt-parent = <&eirq4>;
+				interrupts = <12 2>;
 				gpio-controller;
 				#gpio-cells = <2>;
 				ngpios = <16>;
@@ -358,6 +372,9 @@
 				compatible = "nxp,s32-gpio";
 				reg = <0x42521712 0x02>, <0x42520440 0x40>;
 				reg-names = "pgpdo", "mscr";
+				interrupt-parent = <&eirq4>;
+				interrupts = <4 3>, <6 4>, <9 5>,
+						<11 6>, <13 7>;
 				gpio-controller;
 				#gpio-cells = <2>;
 				ngpios = <16>;
@@ -395,6 +412,8 @@
 				compatible = "nxp,s32-gpio";
 				reg = <0x42d21710 0x02>, <0x42d20480 0x40>;
 				reg-names = "pgpdo", "mscr";
+				interrupt-parent = <&eirq5>;
+				interrupts = <1 0>, <3 1>, <5 2>, <7 3>;
 				gpio-controller;
 				#gpio-cells = <2>;
 				ngpios = <16>;
@@ -406,6 +425,8 @@
 				compatible = "nxp,s32-gpio";
 				reg = <0x42d21716 0x02>, <0x42d204c0 0x40>;
 				reg-names = "pgpdo", "mscr";
+				interrupt-parent = <&eirq5>;
+				interrupts = <0 4>, <2 5>, <5 6>, <6 7>;
 				gpio-controller;
 				#gpio-cells = <2>;
 				ngpios = <10>;
