--- a/subsys/bluetooth/audio/Kconfig
+++ b/subsys/bluetooth/audio/Kconfig
@@ -28,7 +28,7 @@ config BT_CCID
 rsource "Kconfig.baps"
 rsource "Kconfig.vocs"
 rsource "Kconfig.aics"
-rsource "Kconfig.vcs"
+rsource "Kconfig.vcp"
 rsource "Kconfig.micp"
 rsource "Kconfig.csip"
 rsource "Kconfig.tbs"
