--- a/tests/bluetooth/bsim_bt/bsim_test_audio/prj.conf
+++ b/tests/bluetooth/bsim_bt/bsim_test_audio/prj.conf
@@ -58,10 +58,10 @@ CONFIG_BT_MICP_MIC_CTLR=y
 CONFIG_BT_MICP_MIC_CTLR_MAX_AICS_INST=2
 
 # Coordinated Set Identification
-CONFIG_BT_CSIS=y
-CONFIG_BT_CSIS_TEST_SAMPLE_DATA=y
-CONFIG_BT_CSIS_CLIENT=y
-CONFIG_BT_CSIS_CLIENT_TEST_SAMPLE_DATA=y
+CONFIG_BT_CSIP=y
+CONFIG_BT_CSIP_TEST_SAMPLE_DATA=y
+CONFIG_BT_CSIP_SET_COORDINATOR=y
+CONFIG_BT_CSIP_SET_COORDINATOR_TEST_SAMPLE_DATA=y
 
 # Telephone bearer service
 CONFIG_BT_TBS=y
@@ -130,9 +130,9 @@ CONFIG_BT_DEBUG_MCC=y
 CONFIG_BT_OTS_LOG_LEVEL_DBG=y
 CONFIG_BT_DEBUG_OTS_CLIENT=y
 CONFIG_MCTL_DEBUG=y
-CONFIG_BT_DEBUG_CSIS=y
-CONFIG_BT_DEBUG_CSIS_CLIENT=y
-CONFIG_BT_DEBUG_CSIS_CRYPTO=y
+CONFIG_BT_DEBUG_CSIP=y
+CONFIG_BT_DEBUG_CSIP_SET_COORDINATOR=y
+CONFIG_BT_DEBUG_CSIP_CRYPTO=y
 CONFIG_BT_AUDIO_DEBUG_UNICAST_CLIENT=y
 CONFIG_BT_AUDIO_DEBUG_UNICAST_SERVER=y
 CONFIG_BT_AUDIO_DEBUG_BROADCAST_SINK=y
