--- a/tests/bluetooth/shell/audio.conf
+++ b/tests/bluetooth/shell/audio.conf
@@ -83,9 +83,9 @@ CONFIG_BT_MICP_MIC_CTLR=y
 CONFIG_BT_MICP_MIC_CTLR_MAX_AICS_INST=1
 
 # Coordinated Set Identification
-CONFIG_BT_CSIS=y
-CONFIG_BT_CSIS_CLIENT=y
-CONFIG_BT_CSIS_CLIENT_MAX_CSIS_INSTANCES=2
+CONFIG_BT_CSIP=y
+CONFIG_BT_CSIP_SET_COORDINATOR=y
+CONFIG_BT_CSIP_SET_COORDINATOR_MAX_CSIS_INSTANCES=2
 
 CONFIG_MCTL=y
 CONFIG_MCTL_LOCAL_PLAYER_CONTROL=y
@@ -163,4 +163,4 @@ CONFIG_BT_DEBUG_VOCS_CLIENT=y
 CONFIG_BT_DEBUG_AICS=y
 CONFIG_BT_DEBUG_VOCS=y
 CONFIG_BT_AUDIO_DEBUG_STREAM=y
-CONFIG_BT_DEBUG_CSIS_CLIENT=y
+CONFIG_BT_DEBUG_CSIP_SET_COORDINATOR=y
