--- a/samples/net/sockets/can/sample.yaml
+++ b/samples/net/sockets/can/sample.yaml
@@ -2,7 +2,7 @@ sample:
   name: SocketCAN sample
 common:
   tags: net socket can
-  filter: dt_chosen_enabled("zephyr,canbus")
+  filter: dt_chosen_enabled("zephyr,canbus") and not dt_compat_enabled("kvaser,pcican")
   depends_on: can
   harness: console
 tests:
