ARC: disallow build for secure configuration with firq
Such configuration isn't supported by HW.

Signed-off-by: Eugeniy Paltsev <Eugeniy.Paltsev@synopsys.com>
Signed-off-by: Evgeniy Paltsev <PaltsevEvgeniy@gmail.com>

--- a/arch/arc/Kconfig
+++ b/arch/arc/Kconfig
@@ -171,6 +171,7 @@ config ARC_FIRQ
 	bool "FIRQ enable"
 	depends on ISA_ARCV2
 	depends on NUM_IRQ_PRIO_LEVELS > 1
+	depends on !ARC_HAS_SECURE
 	default y
 	help
 	  Fast interrupts are supported (FIRQ). If FIRQ enabled, for interrupts
