drivers: flashdisk: support read-only flashdisks
Force cache-size to 0 and treat flashdisk as read-only when backing
partition has read-only flag set. This allows users to save RAM when the
application does not write to the flashdisk, e.g. when a predefined FAT
filesystem is used.

Signed-off-by: Tomasz Moń <tomasz.mon@nordicsemi.no>

--- a/dts/bindings/misc/zephyr,flash-disk.yaml
+++ b/dts/bindings/misc/zephyr,flash-disk.yaml
@@ -35,4 +35,5 @@ properties:
         adequately chosen. On storage backends with uniform erase-blocks it
         should be at least the erase-block-size, on storage backends with
         non-uniform erase-blocks it should be at least the largest
-        erase-block-size.
+        erase-block-size. The cache-size property is ignored if the partition
+        is read-only.
