--- a/samples/tfm_integration/psa_crypto/sample.yaml
+++ b/samples/tfm_integration/psa_crypto/sample.yaml
@@ -13,6 +13,9 @@ tests:
         harness_config:
           type: multi_line
           regex:
+            - "System IAT size is: (.*)"
+            - "Requesting IAT with (.*) byte challenge."
+            - "IAT data received: (.*)"
             - "Retrieving public key for key #1"
             - "Signature verified"
             - "Destroyed persistent key #1"
