--- a/samples/subsys/tracing/sample.yaml
+++ b/samples/subsys/tracing/sample.yaml
@@ -37,3 +37,8 @@ tests:
   sample.tracing.transport.native_posix.ctf:
     platform_allow: native_posix
     extra_args: CONF_FILE="prj_native_posix_ctf.conf"
+  sample.tracing.percepio:
+    platform_allow: frdm_k64f
+    extra_args: CONF_FILE="prj_percepio.conf"
+    modules:
+      - TraceRecorderSource
