--- a/.github/workflows/twister.yaml
+++ b/.github/workflows/twister.yaml
@@ -2,7 +2,11 @@ name: Run tests with twister
 
 on:
   push:
+    branches:
+    - v2.7-branch
   pull_request_target:
+    branches:
+    - v2.7-branch
   schedule:
     # Run at 00:00 on Saturday
     - cron: '20 0 * * 6'
