--- a/dts/xtensa/intel/intel_adsp_ace15_mtpm.dtsi
+++ b/dts/xtensa/intel/intel_adsp_ace15_mtpm.dtsi
@@ -319,6 +319,16 @@
 			compatible = "intel,adsp-shim";
 			reg = <0x71f00 0x100>;
 		};
+		
+		dfpmcch: dfpmcch@71ac0 {
+			compatible = "intel,adsp-dfpmcch";
+			reg = <0x71ac0 0x40>;
+		};
+		
+		dfpmccu: dfpmccu@71b00 {
+			compatible = "intel,adsp-dfpmccu";
+			reg = <0x71b00 0x100>;
+		};
 
 		tts: tts@72000 {
 			compatible = "intel,adsp-tts";
