--- a/dts/bindings/sensor/ti,ina23x-common.yaml
+++ b/dts/bindings/sensor/ti,ina23x-common.yaml
@@ -38,3 +38,8 @@ properties:
       type: int
       required: true
       description: Shunt resistor value in milliohms
+
+    alert-gpios:
+      type: phandle-array
+      required: false
+      description: Alert pin
