cmake: when stripping zephyr.elf, checksum the reproducible output
Temporary bugs, corner cases and obsolete toolchains aside, the Zephyr
build is most of the time reproducible: #50205 and #14593.

This means two different build machines using the same toolchain will
always produce the same binary output. The one-line addition in this
commit makes it trivial to verify that binary outputs are indeed the
same by adding a single checksum line in the build logs:

```
[16/16] Linking C executable zephyr/zephyr.elf
Memory region         Used Size  Region Size  %age Used
             RAM:       53280 B         3 MB      1.69%
        IDT_LIST:          0 GB         2 KB      0.00%

fdd2ddf2ad7d5da5bbd79b41cef...7b16ef549a8281111d8e205  zephyr.strip
```

This commit makes a non-measurable build time difference.

Build reproducibility matters for (at least) two important reasons:

- Security / supply chain attacks, see https://www.cisa.gov/sbom, #50205,
  https://reproducible-builds.org/ and many others.
- Making sure build configurations are strictly identical when trying to
  reproduce elusive issues or when issuing releases.

Displaying a reproducible checksum accelerates the investigation of
temporary reproducibility issues like #48195.

Signed-off-by: Marc Herbert <marc.herbert@intel.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1679,6 +1679,7 @@ if(CONFIG_BUILD_OUTPUT_STRIPPED)
             $<TARGET_PROPERTY:bintools,strip_flag_infile>${KERNEL_ELF_NAME}
             $<TARGET_PROPERTY:bintools,strip_flag_outfile>${KERNEL_STRIP_NAME}
             $<TARGET_PROPERTY:bintools,strip_flag_final>
+    COMMAND ${CMAKE_COMMAND} -E sha256sum ${KERNEL_STRIP_NAME}
     )
   list(APPEND
     post_build_byproducts
