--- a/.github/workflows/twister.yaml
+++ b/.github/workflows/twister.yaml
@@ -19,6 +19,7 @@ concurrency:
 
 jobs:
   twister-build-prep:
+    if: github.repository_owner == 'zephyrproject-rtos'
     runs-on: zephyr-runner-linux-x64-4xlarge
     container:
       image: ghcr.io/zephyrproject-rtos/ci:v0.24.5
